# cirup-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
cirup_cli/: Cargo.toml  build.rs
cirup_cli/src/: cli.yml  main.rs
cirup_cli/tests/: cli_e2e.rs
cirup_core/: Cargo.toml
cirup_core/src/: config.rs  engine.rs  error.rs  file.rs  job.rs  json.rs  lib.rs  query.rs  query_backend.rs  resource.rs  restext.rs  resx.rs  revision.rs  shell.rs  sync.rs  triple.rs  utils.rs  vcs.rs  vtab.rs
cirup_core/test/: config.cirup  test.json  test.resx  test_new.resx  test_old.resx
cirup_core/test/benchmark/rdm_resx/: BusinessResources.de.resx  BusinessResources.fr.resx  BusinessResources.resx  MsgResources.de.resx  MsgResources.fr.resx  MsgResources.resx  UIResources.de.resx  UIResources.fr.resx  UIResources.resx
cirup_core/test/subtract/: test1A.restext  test1B.restext  test1C.restext
cirup_core/tests/: benchmark_rdm_resx.rs
diff_with_base/: Cargo.toml  main.rs
nuget/: Devolutions.Cirup.Build.Package.csproj  README.md  pack-cirup-dotnet-tool.ps1  pack-cirup-nuget.ps1  test-dotnet-tool-install.ps1  test-e2e.ps1
nuget/buildTransitive/: Devolutions.Cirup.Build.targets
nuget/samples/Devolutions.Cirup.Build.E2E/: Devolutions.Cirup.Build.E2E.csproj  Program.cs
nuget/samples/Devolutions.Cirup.Build.E2E/Resources/: Strings.fr.resx
nuget/scripts/: Import-CirupArtifacts.ps1
nuget/tool/: Devolutions.Cirup.Tool.csproj  Program.cs  README.md
packaging/nuget/: Devolutions.Cirup.Build.Package.csproj  README.md  pack-cirup-nuget.ps1  test-e2e.ps1
packaging/nuget/buildTransitive/: Devolutions.Cirup.Build.props  Devolutions.Cirup.Build.targets
packaging/nuget/samples/Devolutions.Cirup.Build.E2E/: Devolutions.Cirup.Build.E2E.csproj
packaging/nuget/samples/Devolutions.Cirup.Build.E2E/Resources/: Strings.resx
