[package]
name = "cirup_cli"
version = "0.3.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]
edition = "2024"

[[bin]]
name = "cirup"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
embed-resource = "3.0.6"

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies.cirup_core]
path = "../cirup_core"
default-features = false
features = ["rusqlite-c"]

[target.'cfg(not(all(target_os = "windows", target_arch = "aarch64")))'.dependencies.cirup_core]
path = "../cirup_core"

[lints]
workspace = true

