[package]
name = "cirup_core"
version = "0.1.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]

[dependencies]
chrono = "0.4"
regex = "1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde-xml-rs = "0.3.0"
toml = "^0.4"
xml-rs = "0.8.0"
dot_json = "0.2.0"
lazy_static = "1.0.0"
prettytable-rs = "^0.6"
find_git = "1.2.0"
tempfile = "3.0.4"
log = "0.4"

[dependencies.uuid]
version = "0.6"
features = ["v4"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["vtab", "bundled"]

[dependencies.treexml]
git = "https://github.com/awakecoding/treexml-rs.git"
branch = "indexmap"
