[package]
name = "cirup_core"
version = "0.2.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]
edition = "2024"

[features]
default = ["turso-rust"]
turso-rust = ["dep:tokio", "dep:turso", "dep:libsql"]
rusqlite-c = ["dep:rusqlite"]

[dependencies]
chrono = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3.0"
toml = "^0.4"
xml-rs = "0.8.0"
dot_json = "0.2.0"
lazy_static = "1.0.0"
prettytable-rs = "^0.10"
find_git = "1.2.0"
tempfile = "3.0.4"
log = "0.4"

[dependencies.uuid]
version = "0.6"
features = ["v4"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]
optional = true

[dependencies.tokio]
version = "1"
features = ["rt"]
optional = true

[dependencies.turso]
version = "0.5.0-pre.14"
optional = true

[dependencies.libsql]
version = "0.9.29"
default-features = false
features = ["remote", "tls"]
optional = true

[dependencies.treexml]
version = "0.7"

[lints]
workspace = true
