[package]
name = "cirup_core"
version = "0.6.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]
edition = "2024"

[features]
default = ["turso-rust"]
turso-rust = ["dep:tokio", "dep:turso", "dep:libsql"]
rusqlite-c = ["dep:rusqlite"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
xml-rs = "0.8.0"
dot_json = "0.2.0"
lazy_static = "1.0.0"
log = "0.4"
sha2 = "0.10"
unicode-width = "0.2"

[dependencies.uuid]
version = "0.6"
features = ["v4"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]
optional = true

[dependencies.tokio]
version = "1"
features = ["rt"]
optional = true

[dependencies.turso]
version = "0.5.0"
optional = true

[dependencies.libsql]
version = "0.9.29"
default-features = false
features = ["remote", "tls"]
optional = true

[dependencies.treexml]
version = "0.7"

[lints]
workspace = true
